force-app/main/default/objects/Company3__c/Company3__c.object-meta.xml
<CustomObject>
    <label>Company3</label>
    <nameField>
        <label>Company3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies3</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>