force-app/main/default/objects/Company3__c/fields/Button__c.field-meta.xml
<CustomField>
    <fullName>Button__c</fullName>
    <formula>IF(ISPICKVAL(Company_Type__c ,&quot;Electronics&quot;),
 HYPERLINK(&quot;https://www.google.com&quot;,  IMAGE(&quot;/resource/PK_LOGO&quot;, &quot;Google&quot;,50,50) , &quot;_self&quot;),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Button</label>
    <type>Text</type>
</CustomField>