force-app/main/default/objects/Company3__c/fields/Compan_Name__c.field-meta.xml
<CustomField>
    <fullName>Compan_Name__c</fullName>
    <label>Compan Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>TATA</fullName>
            </value>
            <value>
                <fullName>Swagruha</fullName>
            </value>
            <value>
                <fullName>Pista House</fullName>
            </value>
            <value>
                <fullName>Marriott</fullName>
            </value>
            <value>
                <fullName>Taj Residencies</fullName>
            </value>
            <value>
                <fullName>ICICI</fullName>
            </value>
            <value>
                <fullName>Axis</fullName>
            </value>
            <value>
                <fullName>HDFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>