force-app/main/default/objects/Company3__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Food &amp; Supplies</fullName>
            </value>
            <value>
                <fullName>Hotel Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>