force-app/main/default/objects/Company3__c/fields/Technologies_you_know__c.field-meta.xml
<CustomField>
    <fullName>Technologies_you_know__c</fullName>
    <label>Technologies you know</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>DOTNET</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>HADOOP</fullName>
            </value>
            <value>
                <fullName>SALESFORCE</fullName>
            </value>
            <value>
                <fullName>SERVICENOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>